# iaac_stacks

./: .gitignore  README.md  delete-terraform.sh  run-terraform.sh
ansible/: README.md  ansible.cfg  requirements.yml
ansible/playbooks/: cleanup.yml  (+2 more)
architecture/: infra_stack.html  infra_xml.drawio
cdk_stack_infrastructure/: README.md  app.py  cdk.json  deploy_cdk.sh  destroy-stacks.sh
ci/: Dockerfile  config.env  setup.sh
docker/: build.sh  login.sh  push.sh  tag.sh
docs/: architecture_v2.drawio  architecture_v3.drawio
input_test_data/: customer_id_30.json  customers_ids_1-5.json
json_infra/: ApiGatewayStack.template.json  LambdaRdsStack.template.json  MainStack-production.template.json  MainStackproductionApiGatewayStackproductionE17904C5.template.json  MainStackproductionLambdaRdsStackproductionDAF57C66.template.json  MainStackproductionRDSStackproduction3C5AE54B.template.json  MainStackproductionVpcStackproductionCBA518B0.template.json  RDSStack.template.json  README.md  VpcStack.template.json  delete.sh  deploy.sh
lambda/: customers.json  lambda_event.py  pyproject.toml
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  deploy.sh  destroy.sh  naming_utils.py  requirements.txt
terraform/: .terraform.lock.hcl  batch.tf  delete-terraform.sh  lambda.tf  lambda_authorize_token.tf  lambda_rest_api.tf  lambda_store_backup.tf  locals.tf  main.tf  network.tf  outputs.tf  rds.tf  registry.tf  resources.tf  rest_api.tf  run-terraform.sh  s3.tf  schema.sql  step_functions.tf  storage.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
(+29 files in other folders)
