[tool.poetry]
name = "terraform-lambda"
version = "0.1.0"
description = ""
authors = ["Joanna Kiesiak <joanna.kiesiak@gmail.com>"]
readme = "README.md"
packages = [{include = "terraform_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
